# gRPC_image_server

./: CMakeLists.txt  Makefile  build.sh  client.cpp  image.proto  prompt.md  readme.md  server.cpp
_build/: CMakeCache.txt
compiled/: build.sh  image.grpc.pb.cc  image.grpc.pb.h  image.pb.cc  image.pb.h  image.proto
compiled/archive/: image.pb.h
